--- a/style.css
+++ b/style.css
@@ -14,6 +14,28 @@ h1
 	font-size: 50px; 
 }
 
+h2
+{
+	font-family: Calibri;
+	text-align:left; 
+	font-size: 25px; 
+}
+
+h3
+{
+	font-family: Calibri;
+	text-align:left; 
+	font-size: 50px; 
+}
+
+h4
+{
+	font-family: Calibri;
+	text-align:left; 
+	font-size: 14px; 
+}
+
+
 /* HIDE RADIO */
 [type=radio]
 { 
